LISA-2346: Correct spacing in 'Company Structure' page (#159)

--- a/app/assets/stylesheets/lisa-app.scss
+++ b/app/assets/stylesheets/lisa-app.scss
@@ -38,3 +38,10 @@
 .summary-subsection {
     margin-bottom: 30px;
 }
+
+#companyStructure {
+    margin-top: 0px;
+    h1 {
+        margin-block-start: 0.67em;
+    }
+}
